@@ -7,10 +7,9 @@
 
 -------------------------------------------------------------- */
 
-/* When multiple paragraphs follow each other, give every
-   paragraph but the first a text-indent.
-   Uncomment the line below if you want to use this. 
-   p + p   { text-indent:20px; margin-top:-1.5em; } */
+/* Indentation instead of line shifts for sibling paragraphs.
+   Uncomment the line below if you want to use this.
+   p + p { text-indent:2em; margin-top:-1.5em; } */
 
 
 /* For great looking type, use this code instead of asdf: 
